--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 MY_PORT = 8000
-DB_NAME = "movieDB"
+DB_NAME = "tvDB"
 JWT_SECRET = "axoiumjaoixuewqoias2"
-api_key = 0b8bef9997166d6ef69067b1361557c3
+REACT_APP_API_KEY = 0b8bef9997166d6ef69067b1361557c3
